--- a/src/index.html
+++ b/src/index.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Здоровое питание</title>
 </head>
 <body>
-    <div class="box">
-        <h2 class="box_title">Привет!</h2>
-        <img src="./images/logo.png" alt="" class="box_image">
-        <img src="./images/cart.svg" alt="">
-        <svg class="box_svg" width="10em" height="10em" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717L5.07 1.243zM3.5 10.5a.5.5 0 0 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 0 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 0 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 0 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 0 0-1 0v3a.5.5 0 0 0 1 0v-3z"/>
-        </svg>
-        <hr>
-        <svg>
-            <rect width="100" height="50"></rect>
-        </svg>>
-        <hr>
-        <svg>
-            <circle cx="50" cy="50" r="50"></circle>
-        </svg>
-        <hr>
-        <svg width="100" height="60">
-            <ellipse cx="50" cy="50" rx="50" ry="30"></ellipse>
-        </svg>
-        <hr>
-        <svg width="200" height="200">
-            <polygon points="0,0 100,100 0,200"></polygon>
-        </svg>
-        <hr>
-        <svg>
-            <line xl="220" yl="10" x2="20" y2="130" stroke="green"></line>
-        </svg>
-        <hr>
-        <svg>
-            <polyline points="5,135 30,5 55,135 80,5" stroke="green" stroke width="10" fill="none"></polyline>
-        </svg>
-        
+    <div class="main">
+        <header class="header">
+            <a href="" class="logo"></a>
+            <nav>
+                <ul class="header__nav">
+                    <li class="header__item">
+                        <a href="#" class="header__link">Наша продукция</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">О компании</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Новинки</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Каталог</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Доставка</a>
+                    </li>
+                    <li class="header__item">
+                        <a href="#" class="header__link">Контакты</a>
+                </ul>
+            </nav>
+            <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
+            <a href="#" class="header__cart">
+                <span class="header__counter">0</span>
+            </a>
+        </header>
     </div>
 </body>
 </html>
