--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>            
         </div>
-        <img class="main__tomato" src="images/tomato.png" alt="">
+        <img class="main__tomato" src="images/tomato2.png" alt="">
         <img class="main__avocado" src="images/avocado.png" alt="">
         <img class="main__cucumber" src="images/cucumber.png" alt="">
         <img class="main__pepper" src="images/pepper.png" alt="">
