--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
                                 Яйцо перепелиное
                             </h3>
                             <p class="swiper-slide__description">
-                                QEGG Яйцо перепелиное 20шт</p>
+                                QEGG Яйцо перепелиное 20шт<br><br></p>
                             <p class="swiper-slide__price">94 руб/упак</p>
                             <div class="swiper-slide__footer">
                                 <div class="counter">
@@ -399,7 +399,7 @@
                 </div>
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/cottage-cheese.png" alt="">
+                        <img class="catalog-grid__image" src="images/catalog/cottage-cheese2.png" alt="">
                     </div>
                     <h3 class="catalog-grid__title">
                         Творог
@@ -425,7 +425,7 @@
                         Моцарелла
                     </h3>
                     <p class="catalog-grid__description">
-                        Моцарелла Healthy food   45%, 0.125 кг</p>
+                        Моцарелла Healthy food 45%, 0.125 кг </p>
                     <p class="catalog-grid__price">359 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
@@ -445,7 +445,7 @@
                         Масло сливочное
                     </h3>
                     <p class="catalog-grid__description">
-                        Масло Healthy food  сливочное 82,5%, 200г </p>
+                        Масло Healthy food сливочное 82,5%, 200г </p>
                     <p class="catalog-grid__price">139 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
@@ -459,13 +459,13 @@
                 </div>
                 <div class="catalog-grid__item">
                     <div class="catalog-grid__cover">
-                        <img class="catalog-grid__image" src="images/catalog/yogurt-thermo.png" alt="">
+                        <img class="catalog-grid__image" src="images/catalog/yogurt-thermo2.png" alt="">
                     </div>
                     <h3 class="catalog-grid__title">
                         Йогурт термостатный
                     </h3>
                     <p class="catalog-grid__description">
-                        Йогурт Healthy food термостатный  с фруктово-ягодным 2,5 %, 165 г</p>
+                        Йогурт Healthy food термостатный с фруктово-ягодным 2,5 %, 165 г</p>
                     <p class="catalog-grid__price">159 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
@@ -485,7 +485,7 @@
                         Сыр
                     </h3>
                     <p class="catalog-grid__description">
-                        Сыр  Healthy food Сливочный 45% 200г </p>
+                        Сыр Healthy food Сливочный 45% 200г </p>
                     <p class="catalog-grid__price">559 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
@@ -505,7 +505,7 @@
                         Соус для салата
                     </h3>
                     <p class="catalog-grid__description">
-                        Соус для салата Healthy food пикантыный 4%  70гр </p>
+                        Соус для салата Healthy food пикантыный 4% 70гр </p>
                     <p class="catalog-grid__price">59 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
