--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
                                 Яйцо перепелиное
                             </h3>
                             <p class="swiper-slide__description">
-                                QEGG Яйцо перепелиное 20шт<br><br></p>
+                                QEGG Яйцо перепелиное 20шт</p>
                             <p class="swiper-slide__price">94 руб/упак</p>
                             <div class="swiper-slide__footer">
                                 <div class="counter">
@@ -365,7 +365,7 @@
                       Молоко топленое
                     </h3>
                     <p class="catalog-grid__description">
-                        Молоко Healthy food топленеое мдж&nbsp;4%&nbsp;500гр</p>
+                        Молоко Healthy food топленое мдж&nbsp;4%&nbsp;500гр</p>
                     <p class="catalog-grid__price">159 руб/шт</p>
                     <div class="catalog-grid__footer">
                         <div class="counter">
