--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,12 @@
                 <button href="#" class="header__cart">
                     <span class="header__counter">0</span>
                 </button>
+                <div class="header__dropdown">
+                    <div class="header__cover">
+                        <img src="images/catalog/milk.png" alt="Молоко">
+                    </div>
+                    <p class="header__text">Вы добавили в корзину <a class="header__product" href="#">Молоко топленое</a></p>
+                </div>
             </div>
         </header>
         <div class="container">
