--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,23 @@
             <a href="tel:+79453425555" class="header__tel">+7 945 342 55 55</a>
             <div class="header__buttons">
                 <a href="tel:+79453425555" class="header__phone"></a>
-                <button href="#" class="header__menu"></button>
+                <!-- <button href="#" class="header__menu"></button> -->
+
+                <!-- Menu-burger -->
+                <div class="hamburger-menu">
+                    <input id="menu__toggle" type="checkbox" />
+                    <label class="menu__btn" for="menu__toggle">
+                      <span></span>
+                    </label>
+                    <ul class="menu__box">
+                      <li><a class="hamburger-menu__item" href="#">Наша продукция</a></li>
+                      <li><a class="hamburger-menu__item" href="#">О компании</a></li>
+                      <li><a class="hamburger-menu__item" href="#">Новинки</a></li>
+                      <li><a class="hamburger-menu__item" href="#">Каталог</a></li>
+                      <li><a class="hamburger-menu__item" href="#">Доставка</a></li>
+                      <li><a class="hamburger-menu__item" href="#">Контакты</a></li>
+                    </ul>
+                  </div>
                 <button href="#" class="header__cart" onclick="document.getElementById('Notification').style.visibility='visible'">
                     <span class="header__counter">1</span>
                 </button>
