--- a/src/index.html
+++ b/src/index.html
@@ -670,7 +670,7 @@
         <div class="burger__wrapper">
             <a href="#" class="logo"></a>
             <button class="burger__close" id="burger__close"></button>
-            <ul class="burger__menu" id="menu">
+            <ul class="burger__menu" id="burger__menu">
                 <li class="burger__item">
                     <a href="#offer" class="burger__link">Наша продукция</a>
                 </li>
