--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="main">
-        <header class="header">
+        <header class="header" id="headerTop">
             <a href="#" class="logo"></a>
             <nav class="header__navigation">
                 <ul class="header__nav">
@@ -661,6 +661,7 @@
             </div>
         </div>
     </footer>
+    <a href="#headerTop" class="button-up hidden" id="btnUp">Наверх</a>
 
 
                 <!-- Modal burger -->
